--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,17 +28,29 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-port){
+    padding: 15rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-primary-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -9rem;
+
+  @include respond(tab-port){
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; // for video positioning
+
+  @include respond(tab-port){
+    padding: 10 rem 0;
+  }
 }
 
 .section-book {
@@ -49,6 +61,10 @@
       $color-primary-light, 
       $color-primary-dark
   );
+
+  @include respond(tab-port){
+    padding: 10 rem 0;
+  }
 }
 
 .book {
