--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -20,19 +20,43 @@
     // spaces the outline from the imgs
     outline-offset: 2rem;
 
+    @include respond(tab-port){
+      float: left;
+      position: relative;
+      width: 33.3333333%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tab-port){
+        top: 0;
+        transform: scale(1.2);
+      }
     }
 
     &--p2 {
       right: 0;
       top: 2rem;
+
+      @include respond(tab-port){
+        top: -2rem;
+        transform: scale(1.2);
+        z-index: 4;
+      }
     }
 
     &--p3 {
       left: 20%;
       top: 10rem;
+
+      @include respond(tab-port){
+        left: 0;
+        top: 1rem;
+        transform: scale(1.2);
+      }
     }
 
     &:hover {
@@ -41,7 +65,7 @@
 
       transform: scale(1.05) translateY(-.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
-      z-index: 2;
+      z-index: 5;
 
     }
   }
