--- a/css/style.css
+++ b/css/style.css
@@ -414,35 +414,15 @@ body {
     font-weight: 100; }
   @media (max-width: 56.25em) {
     .card {
-      perspective: 150rem;
-      -moz-perspective: 150rem;
-      position: relative;
-      height: 52rem; }
+      height: auto; }
       .card__side {
         font-size: 2rem;
-        height: 52rem;
-        transition: all .8s ease;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        backface-visibility: hidden;
-        border-radius: 3px;
-        overflow: hidden;
-        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-        .card__side--front {
-          background-color: #fff; }
+        height: auto;
+        position: relative;
+        border-radius: 3px; }
         .card__side--back {
-          transform: rotateY(-180deg); }
-          .card__side--back-1 {
-            background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
-          .card__side--back-2 {
-            background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
-          .card__side--back-3 {
-            background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+          transform: rotateY(0); }
       .card:hover .card__side--front {
-        transform: rotateY(180deg); }
-      .card:hover .card__side--back {
         transform: rotateY(0); }
       .card__picture {
         background-size: cover;
