--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -204,71 +204,22 @@
   }
 
   @include respond(tab-port){
-      // FUNCTIONALITY
-    perspective: 150rem;
-    -moz-perspective: 150rem;
-    position: relative;
-    height: 52rem;
+
+    height: auto;
 
     &__side {
-      font-size: 2rem;
-      height: 52rem;
-      transition: all .8s ease; 
-
-      // positions both --front and --back on top of each other and gives them the width of the parent card
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      // hides the back of an element when flipped
-      backface-visibility: hidden;
-
+      font-size: 2rem; // still need this?
+      height: auto;
+      position: relative;
       border-radius: 3px;
-      overflow: hidden; // ensures the above border-radius setting covers the contained image as well
-
-      box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-
-      &--front{
-        background-color: $color-white;
-      }
 
       &--back{
-        // back starts already flipped
-        // negative value to make rotation direction opposite when it flips back to its own 'front'
-        transform: rotateY(-180deg);
+        transform: rotateY(0);
 
-        &-1 {
-          background-image: linear-gradient(
-            to right bottom, 
-            $color-secondary-light,
-            $color-secondary-dark
-          );
-        }
-
-        &-2 {
-          background-image: linear-gradient(
-            to right bottom, 
-            $color-primary-light,
-            $color-primary-dark
-          );
-        }
-
-        &-3 {
-          background-image: linear-gradient(
-            to right bottom, 
-            $color-tertiary-light,
-            $color-tertiary-dark
-          );
-        }
       }
     }
     
     &:hover &__side--front {
-      transform: rotateY(180deg);
-    }
-
-    &:hover &__side--back {
-      // because starts flipped, this flips it over
       transform: rotateY(0);
     }
 
