--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,8 @@ body {
         position: relative;
         border-radius: 3px; }
         .card__side--back {
-          transform: rotateY(0); }
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
       .card:hover .card__side--front {
         transform: rotateY(0); }
       .card__cta {
@@ -429,9 +430,10 @@ body {
         top: 0;
         left: 0;
         transform: translate(0);
-        width: 100%; }
+        width: 100%;
+        padding: 4rem; }
       .card__price-box {
-        margin-bottom: 8rem; }
+        margin-bottom: 3rem; }
       .card__price-value {
         font-size: 6rem; } }
 
