--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -203,6 +203,8 @@
     font-weight: 100;
   }
 
+  // MEDIA QUERY
+
   @include respond(tab-port){
 
     height: auto;
@@ -215,7 +217,7 @@
 
       &--back{
         transform: rotateY(0);
-
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
       }
     }
     
@@ -230,10 +232,11 @@
       left: 0;
       transform: translate(0);
       width: 100%;
+      padding: 4rem;
     }
 
     &__price-box {
-      margin-bottom: 8rem;
+      margin-bottom: 3rem;
     }
 
     &__price-value {
